--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;
-    0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;
+    0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,600;1,
+    700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Docplanner</title>
 </head>
@@ -27,7 +28,7 @@
             </nav>
         </header>
         <div id="homeContent">
-            <img src="res/logo.png" width="30" height="30" />
+            <img src="res/logo.png" width="40" height="40" />
             <h2>Making the healthcare experience more human</h2>
             <div id="hometexts">
                 <h6>We want patients to find the perfect doctor <br>and
@@ -130,36 +131,154 @@
         </div>
         <div class="backgroundbox">
             <div id="firstHalf">
-                <h5> The world's biggest<br>
-                    healthcare platform</h5>
-                <h6>We work from 9 offices all over the world, bringing<br> Docplanner<br>
-                    Group to life in 13 countries.</h6>
-                <img src="res/logocropped.png">
-
+                <div>
+                    <h5> The world's biggest<br>healthcare platform</h5>
+                    <h6>We work from 9 offices all over the world, bringing Docplanner<br>
+                        Group to life in 13 countries.</h6>
+                </div>
+                <img src="res/logocropped.png" height="420" width="420">
             </div>
             <div id="secondHalf">
-                <div id="box1">
-                    <h5>Leader in 13 <br>countries</h5>
-                    <h6>Poland, Brazil, Mexico, Spain, Italy,<br>
-                        Germany, Turkey, Colombia, Czech<br> Republic,
-                        Portugal, Argentina, Peru and <br> Chile</h6>
+                <div id="box-grp1">
+                    <div class="box">
+                        <h5>Leader in 13 <br>countries</h5>
+                        <h6>Poland, Brazil, Mexico, Spain, Italy,<br>
+                            Germany, Turkey, Colombia, Czech<br> Republic,
+                            Portugal, Argentina, Peru and <br> Chile</h6>
+                    </div>
+                    <div class="box">
+                        <h5>90,000,000 <br>patients</h5>
+                        <h6>visit our websites each month</h6>
+                    </div>
                 </div>
-                <div id="box2">
-                    <h5>15,000,000 <br>appointments</h5>
-                    <h6>booked last month</h6>
+                <div id="box-grp2">
+                    <div class="box">
+                        <h5>15,000,000 <br>appointments</h5>
+                        <h6>booked last month</h6>
+                    </div>
+                    <div class="box">
+                        <h5>210,000 active<br>doctors</h5>
+                        <h6>trust our solutions</h6>
+                    </div>
+
                 </div>
-                <div id="box3">
-                    <h5>90,000,000 <br>patients</h5>
-                    <h6>visit our websites each month</h6>
-                </div>
-                <div id="box4">
-                    <h5>210,000 active<br>doctors</h5>
-                    <h6>trust our solutions</h6>
-                </div>
+
+
+
+
+
+
+
+
             </div>
 
 
         </div>
+        <div id="middletext">
+            <h5>Improve the lives of millions.<br>
+                Change yours forever.</h5>
+            <h6>More than 2800 team mates share our same vision, goals and passion.<br>
+                With offices in Warsaw, Barcelona, Munich, Istanbul, Rome, Rio, Bologna,<br>
+                Mexico City and Curitiba, our search for great talent never stops.</h6>
+        </div>
+        <div class="Country">
+            <div class="Grid">
+                <img src="res/warsaw.png" width="300" height="300">
+                <div class="button">
+                    <p> Warsaw</p>
+                    <div id="button">
+                        <h6>SEE OPENINGS</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="Grid">
+                <img src="res/barcelona.png" width="300" height="300">
+                <div class="button">
+                    <p> Barcelona</p>
+                    <div id="button">
+                        <h6>SEE OPENINGS</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="Grid">
+                <img src="res/munich.png" width="300" height="300">
+                <div class="button">
+                    <p> Munich</p>
+                    <div id="button">
+                        <h6>SEE OPENINGS</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="Grid">
+                <img src="res/istanbul.png" width="300" height="300">
+                <div class="button">
+                    <p> Istanbul</p>
+                    <div id="button">
+                        <h6>SEE OPENINGS</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="Grid">
+                <img src="res/rome.png" width="300" height="300">
+                <div class="button">
+                    <p>Rome</p>
+                    <div id="button">
+                        <h6>SEE OPENINGS</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="Grid">
+                <img src="res/bologna.png" width="300" height="300">
+                <div class="button">
+                    <p>Bologna</p>
+                    <div id="button">
+                        <h6>SEE OPENINGS</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="Grid">
+                <img src="res/curitiba.png" width="300" height="300">
+                <div class="button">
+                    <p>Curitiba</p>
+                    <div id="button">
+                        <h6>SEE OPENINGS</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="Grid">
+                <img src="res/rio-janeiro.png" width="300" height="300">
+                <div class="button">
+                    <p>Rio de Janeiro</p>
+                    <div id="button">
+                        <h6>SEE OPENINGS</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="Grid">
+                <img src="res/mexico-city.png" width="300" height="300">
+                <div class="button">
+                    <p>Mexico city</p>
+                    <div id="button">
+                        <h6>SEE OPENINGS</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="lastcontent">
+            <h5>Sounds interesting? Join us now!</h5> <br>
+            <h6>SEE ALL CURRENT OPENINGS</h6>
+        </div>
+        <footer>
+            <div id="foot">
+                <h5>We are leaders in 13 countries: Poland , 
+                    Turky , Spain , Italy , Germany , Czech Republic , 
+                    Portugal , Mexico , Colombia , Brazil , Argentina , Peru and Chile</h5>
+                <h6>This site uses cookies to deliver services in accordance with this Privacy Policy. 
+                    You can specify the conditions for storing or accessing cookies on your browser.<br>
+                    www.docplanner.com © 2023</h6>
+            </div>
+        </footer>
+   
     </main>
 
 </body>
