--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;
+    0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;
     0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,600;1,
     700;1,800;1,900&display=swap" rel="stylesheet">
@@ -113,19 +117,16 @@
         </div>
         <div id="underboxcontent">
             <div id="imgs">
-                <div>
-                    <img id="img1" src="res/Doctoralia.png" width="80" height="15">
-                </div>
-                <div>
-                    <img id="img2" src="res/MioDottore.png" width="80" height="15">
-                </div>
-                <br>
-                <div>
-                    <img id="img3" src="res/Znamylekar.jpg" width="80" height="15">
-                </div>
-                <div>
-                    <img id="img4" src="res/znanylekarz.png" width="80" height="15">
-                </div>
+                    <img class="img4" src="res/Znamylekar.jpg">
+                    <img class="img4" src="res/Doctoralia.png">
+                    <img class="img4" src="res/MioDottore.png">
+                    <img class="img4" src="res/doktortakvimi.png">
+                    <img class="img4" src="res/znanylekarz.png">
+                    <img class="img4" src="res/logo-jameda.svg">
+                    <img class="img4" src="res/logo-tuotempo.svg">
+                    <img class="img4" src="res/logo-gipo-primary (1).svg">
+                    <img class="img4" src="res/logo-clinicloud.svg">
+                    <img class="img4" src="res/logo-feegow.svg">
             </div>
             <h6>We are a global<br>company<br>with local culture</h6>
         </div>
@@ -270,9 +271,21 @@
         </div>
         <footer>
             <div id="foot">
-                <h5>We are leaders in 13 countries: Poland , 
-                    Turky , Spain , Italy , Germany , Czech Republic , 
-                    Portugal , Mexico , Colombia , Brazil , Argentina , Peru and Chile</h5>
+                    <h5>We are leaders in 13 countries:
+                    <a href=""> Poland,</a>
+                    <a href=""> Turkey,</a>
+                    <a href=""> Spain,</a>
+                    <a href=""> Italy,</a>
+                    <a href=""> Germany,</a>
+                    <a href=""> Czech Republic,</a>
+                    <a href=""> Portugal,</a>
+                    <a href=""> Mexico,</a>
+                    <a href=""> Colombia,</a>
+                    <a href=""> Brazil,</a>
+                    <a href=""> Argentina,</a>
+                    <a href=""> Peru,</a>
+                     and
+                    <a href=""> Chile.</a> </h5>
                 <h6>This site uses cookies to deliver services in accordance with this Privacy Policy. 
                     You can specify the conditions for storing or accessing cookies on your browser.<br>
                     www.docplanner.com © 2023</h6>
